# telescope-obs

./: .gitignore  AGENT.md  Makefile  README.md  docker-compose.yml  go.mod  go.sum
config/: AGENT.md  loki.yaml  otel-collector.yaml  prometheus.yaml  tempo.yaml
config/grafana/: AGENT.md
config/grafana/dashboards/: AGENT.md  dashboards.yaml  event_inspector.json  pipeline_health.json
config/grafana/datasources/: AGENT.md  datasources.yaml
gateway/: AGENT.md  Dockerfile
gateway/cmd/gateway/: main.go
gateway/internal/db/: AGENT.md  store.go
gateway/internal/grpc/: AGENT.md  server.go
gateway/internal/otel/: AGENT.md  setup.go
gateway/migrations/: 001_init.sql  002_traces.sql  AGENT.md
lib/python/: pyproject.toml
lib/python/telescope_obs/: AGENT.md  __init__.py  client.py  metrics.py  otel.py
plots/: .gitignore
proto/: AGENT.md  events.proto
telescopes/: AGENT.md  Dockerfile
telescopes/chime/: AGENT.md  pipeline.py
telescopes/hirax/: AGENT.md  pipeline.py
telescopes/spt/: AGENT.md  pipeline.py
